--- a/Bootstrap-template-Gp/index-team.html
+++ b/Bootstrap-template-Gp/index-team.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- JOJO M -->
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>CFG8</title>
-  <meta content="" name="description">
+  <!-- <meta content="" name="description">
   <meta content="" name="keywords"> -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
 
   <!-- Favicons -->
   <link href="assets/img/favicon-globe2.png" rel="icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link href="./https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="./assets/vendor/aos/aos.css" rel="stylesheet">
@@ -25,6 +23,13 @@
   <link href="./assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="./assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="./assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- jojo CSS File -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
+  <!-- Add icon library -->
+  <!-- Font Awesome 5.15.1 CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
 
   <!-- Template Main CSS File -->
   <link href="./assets/css/style.css" rel="stylesheet">
@@ -44,20 +49,19 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-lg-between">
 
-       <!-- <h1 class="logo me-auto me-lg-0"><a href="index.html">Gp1<span>.</span></a></h1> -->
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="https://codefirstgirls.com/" class="logo me-auto me-lg-0"><img src="./assets/img/CFG-logo.png" alt="CFG logo" class="img-fluid"></a>
-      <h1 class="logo me-auto me-lg-0"><a href="./index.html">CFG8</a></h1>
-      
+      <!-- Mercede updated header logos -->
+      <a href="https://codefirstgirls.com/" class="logo me-auto me-lg-0"><img src="assets/img/CFG-logo.png" alt="CFG logo" class="img-fluid"></a>
+      <h1 class="logo me-auto me-lg-0"><a href="#hero">CFG8</a></h1>
 
+      <!-- Mercede updated Navbar titles -->
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="./index-home.html">Home</a></li>
+          <li><a class="nav-link scrollto active" href="./index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="./index-what-we-do.html">What We Do</a></li>
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
-          <li class="dropdown"><a href="#"><span>The Team</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="./index-team.html"><span>The Team</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Jojo Russell</a></li>
+              <li><a href="./About Me Pages/Jojo">Jojo Russell</a></li>
               <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
@@ -68,8 +72,8 @@
                 </ul>
               </li> -->
               <li><a href="#">Kay Chau</a></li>
-              <li><a href="#">Mercede Lee</a></li>
-              <li><a href="#">Rachel Green</a></li>
+              <li><a href="./About Me Pages/Mercede Lee">Mercede Lee</a></li>
+              <li><a href="./About Me Pages/Rachel Green">Rachel Green</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="./index-contact.html">Contact us</a></li>
@@ -77,9 +81,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <!-- <a href="#about" class="get-started-btn scrollto">Get Started</a> -->
-
-    </div>
+      </div>
   </header><!-- End Header -->
 
 
