--- a/Bootstrap-template-Gp/index.html
+++ b/Bootstrap-template-Gp/index.html
@@ -56,14 +56,12 @@
       <!-- Mercede updated Navbar titles -->
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto active" href="./index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="./index-what-we-do.html">What We Do</a></li>
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
-          <li class="dropdown"><a href="#"><span>The Team</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="./index-team.html"><span>The Team</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Jojo Russell</a></li>
+              <li><a href="./About Me Pages/Jojo">Jojo Russell</a></li>
               <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
@@ -74,11 +72,11 @@
                 </ul>
               </li> -->
               <li><a href="#">Kay Chau</a></li>
-              <li><a href="#">Mercede Lee</a></li>
-              <li><a href="#">Rachel Green</a></li>
+              <li><a href="./About Me Pages/Mercede Lee">Mercede Lee</a></li>
+              <li><a href="./About Me Pages/Rachel Green">Rachel Green</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact us</a></li>
+          <li><a class="nav-link scrollto" href="./index-contact.html">Contact us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
