--- a/Bootstrap-template-Gp/index-contact.html
+++ b/Bootstrap-template-Gp/index-contact.html
@@ -60,7 +60,7 @@
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <li class="dropdown"><a href="./index-team.html"><span>The Team</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="./About Me Pages/Jojo">Jojo Russell</a></li>
+              <li><a href="./About Me Pages/Jojo/Index.html">Jojo Russell</a></li>
               <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
@@ -71,8 +71,8 @@
                 </ul>
               </li> -->
               <li><a href="#">Kay Chau</a></li>
-              <li><a href="./About Me Pages/Mercede Lee">Mercede Lee</a></li>
-              <li><a href="./About Me Pages/Rachel Green">Rachel Green</a></li>
+              <li><a href="./About Me Pages/Mercede Lee/20230414-mercede-profile.html">Mercede Lee</a></li>
+              <li><a href="./About Me Pages/Rachel Green/index.html">Rachel Green</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="./index-contact.html">Contact us</a></li>
