--- a/Bootstrap-template-Gp/index-team.html
+++ b/Bootstrap-template-Gp/index-team.html
@@ -49,7 +49,7 @@
     <div class="container d-flex align-items-center justify-content-lg-between">
 
       <!-- Mercede updated header logos -->
-      <a href="https://codefirstgirls.com/" class="logo me-auto me-lg-0"><img src="./assets/img/CFG-logo.png" alt="CFG logo" class="img-fluid"></a>
+      <a href="https://codefirstgirls.com/" target="_blank" class="logo me-auto me-lg-0"><img src="./assets/img/CFG-logo.png" alt="CFG logo" class="img-fluid"></a>
       <h1 class="logo me-auto me-lg-0"><a href="./index.html">CFG8</a></h1>
 
       <!-- Mercede updated Navbar titles -->
@@ -60,7 +60,7 @@
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <li class="dropdown"><a href="./index-team.html"><span>The Team</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="./About Me Pages/Jojo/Index.html">Jojo Russell</a></li>
+              <li><a href="./About Me Pages/Jojo/Index.html" target="_blank">Jojo Russell</a></li>
               <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
@@ -71,8 +71,8 @@
                 </ul>
               </li> -->
               <li><a href="#">Kay Chau</a></li>
-              <li><a href="./About Me Pages/Mercede Lee/20230414-mercede-profile.html">Mercede Lee</a></li>
-              <li><a href="./About Me Pages/Rachel Green/index.html">Rachel Green</a></li>
+              <li><a href="./About Me Pages/Mercede Lee/20230414-mercede-profile.html" target="_blank">Mercede Lee</a></li>
+              <li><a href="./About Me Pages/Rachel Green/index.html" target="_blank">Rachel Green</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="./index-contact.html">Contact us</a></li>
