--- a/Bootstrap-template-Gp/index-contact.html
+++ b/Bootstrap-template-Gp/index-contact.html
@@ -70,7 +70,7 @@
                   <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
               </li> -->
-              <li><a href="#">Kay Chau</a></li>
+              <li><a href="./About Me Pages/Kay Chau/kay_homework.html">Kay Chau</a></li>
               <li><a href="./About Me Pages/Mercede Lee/20230414-mercede-profile.html" target="_blank">Mercede Lee</a></li>
               <li><a href="./About Me Pages/Rachel Green/index.html" target="_blank">Rachel Green</a></li>
             </ul>
@@ -146,7 +146,7 @@
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
-                <div class="error-message"></div>
+                <div class="error-message">Error, Please try again</div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
