--- a/Bootstrap-template-Gp/index.html
+++ b/Bootstrap-template-Gp/index.html
@@ -70,7 +70,7 @@
                   <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
               </li> -->
-              <li><a href="#">Kay Chau</a></li>
+              <li><a href="./About Me Pages/Kay Chau/kay_homework.html">Kay Chau</a></li>
               <li><a href="./About Me Pages/Mercede Lee/20230414-mercede-profile.html" target="_blank">Mercede Lee</a></li>
               <li><a href="./About Me Pages/Rachel Green/index.html" target="_blank">Rachel Green</a></li>
             </ul>
@@ -438,7 +438,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                <img src="./assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                 <h3>John Larson</h3>
                 <h4>Entrepreneur</h4>
                 <p>
@@ -468,7 +468,7 @@
       <div class="swiper-wrapper">
         <div class="card swiper-slide">
           <div class="card__image">
-            <img src="assets/img/team/Jojo.jpeg" alt="card image" />
+            <img src="./assets/img/team/Jojo.jpeg" alt="card image" />
           </div>
 
           <div class="card__content">
@@ -494,7 +494,7 @@
 
         <div class="card swiper-slide">
           <div class="card__image">
-            <img src="assets/img/team/Kay.jpeg" alt="card image" />
+            <img src="./assets/img/team/Kay.jpeg" alt="card image" />
           </div>
 
           <div class="card__content">
@@ -522,7 +522,7 @@
 
         <div class="card swiper-slide">
           <div class="card__image">
-            <img src="assets/img/team/mercede pic.jpg" alt="card image" />
+            <img src="./assets/img/team/mercede pic.jpg" alt="card image" />
           </div>
 
           <div class="card__content">
@@ -550,7 +550,7 @@
         <div class="card swiper-slide">
           <div class="card__image">
             <img
-              src="assets/img/team/PXL_20230516_163851135.MP.jpg"
+              src="./assets/img/team/PXL_20230516_163851135.MP.jpg"
               alt="card image"
             />
           </div>
@@ -593,7 +593,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/CFG-logo.png" alt="CFG logo" class="img-fluid"></a>
+              <a href="./index.html" class="logo me-auto me-lg-0"><img src="./assets/img/CFG-logo.png" alt="CFG logo" class="img-fluid"></a>
               <p>
                 101 Second Road, London <br>
                 SW1A 1AA, UK<br><br>
@@ -642,22 +642,35 @@
         </div>
       </div>
     </div>
+
+    <!-- <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong><span>Gp</span></strong>. All Rights Reserved
+      </div>
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/ -->
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div> -->
+    <!-- </div> -->
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="./assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="./assets/vendor/aos/aos.js"></script>
+  <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="./assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="./assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="./assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="./assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="./assets/js/main.js"></script>
 
 </body>
 
