--- a/Bootstrap-template-Gp/index.html
+++ b/Bootstrap-template-Gp/index.html
@@ -622,11 +622,11 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">E-commerce setup</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Paid Advertising & Email Marketing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Website Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Content and Video Production</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Logo Design & Merchandise</a></li>
             </ul>
           </div>
 
