--- a/Bootstrap-template-Gp/contacts.html
+++ b/Bootstrap-template-Gp/contacts.html
@@ -12,7 +12,7 @@
   <link href="./assets/img/favicon-globe2.png" rel="icon">
 
   <!-- Google Fonts -->
-  <link href="./https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="./assets/vendor/aos/aos.css" rel="stylesheet">
@@ -56,9 +56,9 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link scrollto active" href="./index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="./index-what-we-do.html">What We Do</a></li>
+          <li><a class="nav-link scrollto" href="./what-we-do.html">What We Do</a></li>
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
-          <li class="dropdown"><a href="./index-team.html"><span>The Team</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="./team.html"><span>The Team</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="./About Me Pages/Jojo/Index.html" target="_blank">Jojo Russell</a></li>
               <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -75,7 +75,7 @@
               <li><a href="./About Me Pages/Rachel Green/index.html" target="_blank">Rachel Green</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="./index-contact.html">Contact us</a></li>
+          <li><a class="nav-link scrollto" href="./contacts.html">Contact us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
