--- a/Bootstrap-template-Gp/index.html
+++ b/Bootstrap-template-Gp/index.html
@@ -56,9 +56,9 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link scrollto active" href="./index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="./index-what-we-do.html">What We Do</a></li>
+          <li><a class="nav-link scrollto" href="./what-we-do.html">What We Do</a></li>
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
-          <li class="dropdown"><a href="./index-team.html"><span>The Team</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="./team.html"><span>The Team</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="./About Me Pages/Jojo/Index.html" target="_blank">Jojo Russell</a></li>
               <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -75,7 +75,7 @@
               <li><a href="./About Me Pages/Rachel Green/index.html" target="_blank">Rachel Green</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="./index-contact.html">Contact us</a></li>
+          <li><a class="nav-link scrollto" href="./contact.html">Contact us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -264,7 +264,7 @@
         <div class="text-center">
           <h3>Contact Us</h3>
           <p> Contact us to find out how we can help you.  We can provide an end to end service from market research to a fully working website attracting customers.</p>
-          <a class="cta-btn" href="./index-contact.html">Get in touch</a>
+          <a class="cta-btn" href="./contact.html">Get in touch</a>
         </div>
 
       </div>
@@ -613,9 +613,9 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">The Team</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./what-we-do.html">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./team.html">The Team</a></li>
             </ul>
           </div>
 
